--- a/src/braindistance/CMakeLists.txt
+++ b/src/braindistance/CMakeLists.txt
@@ -16,7 +16,8 @@ ADD_EXECUTABLE(pxbraindistance
 	itkDeformationFieldBendingEnergyFilter.txx
 )
 
-INSTALL_TARGETS(/. pxbraindistance)
-
 TARGET_LINK_LIBRARIES(pxbraindistance pxcommon ITKBasicFilters ITKIO ITKCommon ITKNumerics ITKStatistics)
+
+INSTALL( TARGETS pxbraindistance
+  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
 
