--- a/src/closestversor3Dtransform/CMakeLists.txt
+++ b/src/closestversor3Dtransform/CMakeLists.txt
@@ -12,7 +12,8 @@ ENDIF(ITK_FOUND)
 
 ADD_EXECUTABLE(pxclosestversor3Dtransform closestversor3Dtransform.cxx)
 
-INSTALL_TARGETS(/. pxclosestversor3Dtransform)
-
 TARGET_LINK_LIBRARIES(pxclosestversor3Dtransform pxcommon ITKBasicFilters ITKIO ITKCommon)
+
+INSTALL( TARGETS pxclosestversor3Dtransform
+  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
 
