--- a/src/extractindexfromvectorimage/CMakeLists.txt
+++ b/src/extractindexfromvectorimage/CMakeLists.txt
@@ -20,5 +20,6 @@ ADD_EXECUTABLE(pxextractindexfromvectorimage extractindexfromvectorimage.cxx)
 
 TARGET_LINK_LIBRARIES(pxextractindexfromvectorimage pxcommon ITKIO ITKCommon)
 
-INSTALL_TARGETS(/. pxextractindexfromvectorimage)
+INSTALL( TARGETS pxextractindexfromvectorimage
+  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
 
