--- a/src/getDICOMseriesUIDs/CMakeLists.txt
+++ b/src/getDICOMseriesUIDs/CMakeLists.txt
@@ -14,5 +14,6 @@ ADD_EXECUTABLE(pxgetDICOMseriesUIDs getDICOMseriesUIDs.cxx)
 
 TARGET_LINK_LIBRARIES(pxgetDICOMseriesUIDs pxcommon ITKIO ITKCommon)
 
-INSTALL_TARGETS(/. pxgetDICOMseriesUIDs)
+INSTALL( TARGETS pxgetDICOMseriesUIDs
+  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
 
