--- a/src/castconvert/CMakeLists.txt
+++ b/src/castconvert/CMakeLists.txt
@@ -2,13 +2,8 @@
 PROJECT(castconvert)
 
 # Find ITK.
-FIND_PACKAGE(ITK)
-IF(ITK_FOUND)
-  INCLUDE(${ITK_USE_FILE})
-ELSE(ITK_FOUND)
-  MESSAGE(FATAL_ERROR
-          "Cannot build without ITK.  Please set ITK_DIR.")
-ENDIF(ITK_FOUND)
+FIND_PACKAGE( ITK REQUIRED )
+INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE(pxcastconvert
  castconvert.cxx
