--- a/src/computedifferenceimageBIG/CMakeLists.txt
+++ b/src/computedifferenceimageBIG/CMakeLists.txt
@@ -8,13 +8,8 @@ IF ( WIN32 )
 ENDIF ( WIN32 )
 
 # Find ITK.
-FIND_PACKAGE(ITK)
-IF(ITK_FOUND)
-  INCLUDE(${ITK_USE_FILE})
-ELSE(ITK_FOUND)
-  MESSAGE(FATAL_ERROR
-          "Cannot build without ITK.  Please set ITK_DIR.")
-ENDIF(ITK_FOUND)
+FIND_PACKAGE( ITK REQUIRED )
+INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE(pxcomputedifferenceimageBIG computeDifferenceImage.cxx computeDifferenceImageVector.cxx computeDifferenceImageVector2D.cxx computeDifferenceImageVector3D.cxx computeDifferenceImageVector4D.cxx)
 
